# ai-isa-jit

./: .gitignore  CMakeLists.txt  README.md
ai-isa-jit/: CMakeLists.txt  ai-isa-jit-emit.c  ai-isa-jit-emit.h  ai-isa-jit.c  ai-isa-jit.h  elfdef.h
test/: CMakeLists.txt  f.cl  run.c
